# apfelmaennchen_vibe

./: Cargo.toml
src/: gpu_mandelbrot.rs  main.rs  mandelbrot.wgsl
