[package]
name = "apfelmaennchen"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rayon = "1.8"
num-complex = "0.4.6"
wgpu = "0.16.3"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures-intrusive = "0.5"


[profile.release]
opt-level = 3
